--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.3",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
+    "gray-matter": "^4.0.3",
     "next": "13.2.1",
+    "next-mdx-remote": "^4.4.1",
+    "next-themes": "^0.2.1",
+    "notion-to-md": "^2.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-code-titles": "^1.2.0",
+    "rehype-prism-plus": "^1.5.1",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
