--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "gray-matter": "^4.0.3",
     "next": "13.2.1",
@@ -27,12 +26,21 @@
     "rehype-code-titles": "^1.2.0",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1",
-    "typescript": "4.9.5"
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.2.7",
+    "typescript": "^5.0.4"
   }
 }
