--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "date-fns": "^2.30.0",
     "eslint-config-next": "13.2.1",
     "gray-matter": "^4.0.3",
     "next": "13.2.1",
@@ -21,6 +22,7 @@
     "notion-to-md": "^2.5.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-code-titles": "^1.2.0",
     "rehype-prism-plus": "^1.5.1",
