--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "rehype-code-titles": "^1.2.0",
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "rss": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
