--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rss": "^1.2.2"
   },
   "devDependencies": {
+    "@types/rss": "^0.0.30",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "prettier": "^2.8.8",
