--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "^14.0.4",
+    "@resvg/resvg-js": "^2.6.1",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -17,7 +18,7 @@
     "date-fns": "^2.30.0",
     "eslint-config-next": "13.2.1",
     "gray-matter": "^4.0.3",
-    "next": "13.2.1",
+    "next": "13.4.12",
     "next-mdx-remote": "^4.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,7 +28,8 @@
     "rehype-prism-plus": "^1.5.1",
     "rehype-slug": "^5.1.0",
     "remark-gfm": "^3.0.1",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "satori": "^0.10.13"
   },
   "devDependencies": {
     "@types/rss": "^0.0.30",
