--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "satori": "^0.10.13"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.11",
     "@types/rss": "^0.0.30",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
